SERVER-88949 Fix skipAmount in explain (#21199)

(cherry picked from commit 78453425ac98a10d59947385f001be0a89fbee2d)

GitOrigin-RevId: b4efbec26f9e9824750308eed5f48ec450d65606